--- a/Projects/Html/Fitness_profile/Fitness_Home.html
+++ b/Projects/Html/Fitness_profile/Fitness_Home.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		
-		<h1 class="centeredcontent pageTitle">Fitness New Goal 2020</h1>		
+		<h1 class="centeredcontent pageTitle">Fitness New Goal 2020 - Changes made by Ambar</h1>		
 	    
 		<div class="newrow">
 			<div class="centeredcontent newcolumn">
