Changed relative Path

--- a/Projects/Html/Fitness_profile/Clients.html
+++ b/Projects/Html/Fitness_profile/Clients.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>A Certified Fitness Trainer-Clients</title>
-		<link rel="stylesheet" href="E:/mitali/Projects/Html/Fitness_profile/css/Fitness_style.css"></link>
+		<link rel="stylesheet" href="css/Fitness_style.css"></link>
 	</head>
 	<body>
 		
@@ -12,10 +12,10 @@
 	   <div class="rowthird">
 		 <h1>Sucess stories</h1>
 			<div>
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/DietPlan.jpg">
+				<img src="Media/Image/DietPlan.jpg">
 			</div>
 			<div>
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Imageno2.jpg">
+				<img src="Media/Image/Imageno2.jpg">
 			</div>
 		</div>
 		
@@ -25,7 +25,7 @@
 			<tr >
 				<td height="300" class="client1data1">
 					<div >
-						<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/client1.jpg"> 
+						<img src="Media/Image/client1.jpg"> 
 					</div>
 				</td>
 				<td height="300" class="client1data2">
@@ -43,7 +43,7 @@
 			<tr>
 				<td height="300"class="client2data1">
 					<div >
-						<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Image8.jpg">
+						<img src="Media/Image/Image8.jpg">
 					</div>
 				</td>
 				<td  height="300" class="client2data1">
@@ -57,7 +57,7 @@
 			
 			<tr>
 				<td height="300"class="client2data1">
-					<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Imageno9.jpg">
+					<img src="Media/Image/Imageno9.jpg">
 				</td>
 				<td height="300" class="client2data1">
 					<div >
