--- a/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
+++ b/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>A Certified Fitness Trainer</title>
-		<link rel="stylesheet" href="E:/mitali/Projects/Html/Fitness_profile/css/Fitness_style.css"></link>
+		<link rel="stylesheet" href="css/Fitness_style.css"></link>
 	</head>
 	<body>
 		
@@ -17,7 +17,7 @@
 				Twenty-five percent of your daily nutritional intake should ideally come from healthy proteins found naturally (no shakes or powders please!). To begin with, let’s understand the TEF or Thermic Effect of Food, which is caused when you eat. The body uses its extra calories to process and digest this food. Of all the food groups, protein contains the highest TEF, potentially bringing it up to a whopping 30 percent, which is ten times more than the maximum of 3 per cent that fats offer.Protein is also a filling option, particularly animal sources of protein, so this prevents binge fests on unhealthy offerings, and makes sure your tummy feels satisfied in a good way. Protein is also a key nutrient in muscle-building, so when you take in a protein-rich diet, it helps convert fat to muscle, which in turn increases metabolism. So you’ll eat less, burn more, and stay strong – a win-win situation from every angle. 
 			</div>
 			<div class=" nutritiondietplan column7" style="font-family:cursive;">
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Imageno11.png" height="250px" width="300px">
+				<img src="Media/Image/Imageno11.png" height="250px" width="300px">
 			</div>
 		</div>
 		
@@ -29,7 +29,7 @@
 				Carbohydrates are found in a wide array of both healthy and unhealthy foods—bread, beans, milk, popcorn, potatoes, cookies, spaghetti, soft drinks, corn, and cherry pie. They also come in a variety of forms. The most common and abundant forms are sugars, fibers, and starches.Foods high in carbohydrates are an important part of a healthy diet. Carbohydrates provide the body with glucose, which is converted to energy used to support bodily functions and physical activity. But carbohydrate quality is important; some types of carbohydrate-rich foods are better than others:The healthiest sources of carbohydrates—unprocessed or minimally processed whole grains, vegetables, fruits and beans—promote good health by delivering vitamins, minerals, fiber, and a host of important phytonutrients.Unhealthier sources of carbohydrates include white bread, pastries, sodas, and other highly processed or refined foods.  These items contain easily digested carbohydrates that may contribute to weight gain, interfere with weight loss, and promote diabetes and heart disease.The Healthy Eating Plate recommends filling most of your plate with healthy carbohydrates – with vegetables (except potatoes) and fruits taking up about half of your plate, and whole grains filling up about one fourth of your plate.
 			</div>
 			<div class=" column11">
-					<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/carbs.jpg" height="200px" width="275px">
+					<img src="Media/Image/carbs.jpg" height="200px" width="275px">
 			</div>
 		</div>
 		
@@ -42,7 +42,7 @@
 			Fat are an essential part of our diet and is important for good health. There are different types of fats, with some fats being healthier than others. To help make sure you stay healthy, it is important to eat unsaturated fats in small amounts as part of a balanced diet.When eaten in large amounts, all fats, including healthy fats, can contribute to weight gain. Fat is higher in energy (kilojoules) than any other nutrient and so eating less fat overall is likely to help with weight loss.Eating less saturated and trans fats may help lower your risk of heart disease. When buying products check the labels and choose the varieties that are lower in saturated and trans fats and higher in poly and monounsaturated fats.So a diet that is low in saturated fats and trans fats, but that also includes moderate amounts of unsaturated fats will help you stay healthy.
 		 </div>
 		 <div class="nutritiondietplan column103">
-		    <img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/fats.jpg" height="200px" width="300px" style="text-align:right;">
+		    <img src="Media/Image/fats.jpg" height="200px" width="300px" style="text-align:right;">
 		 </div>
 		
 		
@@ -80,7 +80,7 @@
 
             </div>	
 			<div class="row11 vegetable2">
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/vegetables.jpg" height="200px;" width="300px;">
+				<img src="Media/Image/vegetables.jpg" height="200px;" width="300px;">
 			</div>		
 		</div>
 		
@@ -92,7 +92,7 @@
 				Fruits are a good source of vitamins and minerals, recognized for their role in preventing vitamin C and vitamin A deficiencies. People who incorporate fruits and vegetables as part of a healthy eating pattern have a reduced risk of some chronic diseases. USDA's MyPlate encourages filling half of the plate with fruits and vegetables at mealtimes.Fruits are an important part of a healthy eating pattern and the source of many vital nutrients, including potassium, folate (folic acid), and antioxidants including polyphenols. Fruit such as blueberries, cranberries, strawberries and citrus also contain phytochemicals that are being studied for their added health benefits.  
 			</div>
 			<div class="fruits fruit3">
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/fruits.jpg">
+				<img src="Media/Image/fruits.jpg">
 			</div>
 		</div>
 		
