--- a/Projects/Html/Fitness_profile/Fitness_Home.html
+++ b/Projects/Html/Fitness_profile/Fitness_Home.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>A Certified Fitness Trainer</title>
-		<link rel="stylesheet" href="E:/mitali/Projects/Html/Fitness_profile/css/Fitness_style.css"></link>
+		<link rel="stylesheet" href="css/Fitness_style.css"></link>
 	</head>
 	<body>
 		
@@ -10,7 +10,7 @@
 	    
 		<div class="newrow">
 			<div class="centeredcontent newcolumn">
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/trainer_profile.jpg" height="400" width="250">
+				<img src="Media/Image/trainer_profile.jpg" height="400" width="250">
 			</div>
 			<div class="newcolumn">
 					<h2 style="font-family:cursive;">Mark Stella</h2>
@@ -51,7 +51,7 @@
 				<p class="small"style=" font-family:cursive;font-size:15px;">Muscular strength relates to your ability to move and lift objects. It’s measured by how much force you can exert and how much weight you can lift for a short period of time.Examples of exercises that develop muscular strength and power include resistance training, such as weightlifting, bodyweight exercises, and res istance band exercises. Running, cycling, and climbing hills are also options.Read on to learn more about the difference between muscular strength and muscular endurance, as well as muscular strength benefits, cautions, and exercises.</p>
 			</div>
 			<div class="column right" style="">
-			   <img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Imag1.jpg">
+			   <img src="Media/Image/Imag1.jpg">
 			</div>
 			
         </div>
@@ -60,17 +60,17 @@
 	   <div class="rowthird">
 		 <h1>Sucess stories</h1>
 			<div>
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/DietPlan.jpg">
+				<img src="Media/Image/DietPlan.jpg">
 			</div>
 			<div>
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Imageno2.jpg">
+				<img src="Media/Image/Imageno2.jpg">
 			</div>
 		</div>
 			<h1>Our clients<h1>
 			
 		<div class="rowfourth">
 			<div class="column column1" >
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Image6.jpg" height="400" width="400px" > 
+				<img src="Media/Image/Image6.jpg" height="400" width="400px" > 
 				
 			</div>
 			<div class="column column2">
@@ -84,13 +84,13 @@
 				Kevin Gendreau, MD, 31, wrestled with a food addiction for more than a decade, and was 306 pounds at his heaviest."I was diagnosed with high blood pressure, hypertension, high cholesterol, fatty liver disease, and sleep apnea, among other things," Gendreau told Best Life in October. "I knew they were all because of my eating habits, but I just couldn't stop."But when his sister was diagnosed with terminal cancer in 2016, it became a wake-up call for him to make his physical health a priority. "What she was going through wasn't her choice," he said. "What I was doing to myself was."By cutting out all the junk food and replacing it with a diet rich in fruits, vegetables, nuts, and protein, Gendreau lost 125 pounds in 18 months."The best advice that I can give is to find a motivation to change," he said. "For me, it was my sister getting sick and needing to be there for her kids, but it could be anything. Once you find that reason and commit to it, you're good to go."
 			</div >
 			<div class="column4row5 column4">
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Image8.jpg" height="400" width="300">
+				<img src="Media/Image/Image8.jpg" height="400" width="300">
 			</div>
 		</div>
 		
 		<div class="rowsixth">
 			<div class="column column1">
-			<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Imageno9.jpg" height="400" width="300">
+			<img src="Media/Image/Imageno9.jpg" height="400" width="300">
 			</div>
 			<div class="column column2">
 			Think it's too late to change your body once you're over 50? Think again. In October, 73-year-old Joan MacDonald became an internet inspiration after showing off her incredible transformation."For many decades, I was more often overweight than at a healthy weight," MacDonald told The Daily Mail. "I was on medication for high blood pressure, high cholesterol, and acid reflux. My arthritis was acting up pretty bad."Concerned about her health, MacDonald's daughter taught her mom how to use her iPhone to track her meals and exercise activity. That tool helped drive her to eat more protein and healthy fats, and go to the gym four or five days a week. And after making those major changes to her lifestyle, MacDonald lost 55 pounds in a year, gained plenty of muscle, and now helps others reach their fitness goals, no matter how old they are."For those who truly feel at a loss, I'd say change one thing with your food intake, one exercise to do, and each week add something new," she said. "Don't expect miracles right away, take it slow and steady but keep building."
@@ -105,7 +105,7 @@
 				Twenty-five percent of your daily nutritional intake should ideally come from healthy proteins found naturally (no shakes or powders please!). To begin with, let’s understand the TEF or Thermic Effect of Food, which is caused when you eat. The body uses its extra calories to process and digest this food. Of all the food groups, protein contains the highest TEF, potentially bringing it up to a whopping 30 percent, which is ten times more than the maximum of 3 per cent that fats offer.Protein is also a filling option, particularly animal sources of protein, so this prevents binge fests on unhealthy offerings, and makes sure your tummy feels satisfied in a good way. Protein is also a key nutrient in muscle-building, so when you take in a protein-rich diet, it helps convert fat to muscle, which in turn increases metabolism. So you’ll eat less, burn more, and stay strong – a win-win situation from every angle. 
 			</div>
 			<div class=" nutritiondietplan column7" style="font-family:cursive;">
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Imageno11.png" height="400px" width="400px" >
+				<img src="Media/Image/Imageno11.png" height="400px" width="400px" >
 			</div>
 			<div class="nutritiondietplan column8">
 			   <h1>Proteins</h1>
@@ -121,14 +121,14 @@
 				<p style="color:red; font-size:23px; "><b>Space between 2 divs</b></p>
 			</div>
 			<div class=" column11">
-					<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/carbs.jpg" height="200px" width="300px">
+					<img src="Media/Image/carbs.jpg" height="200px" width="300px">
 					<p style="color:red"><b>Doubt even after reducing<br></b></p>
 					<p style="color:red"><b> width image still remains in left???</b></p>
 			</div>
 		</div>
 		
 		<div class="container">
-			<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/vegretable.jpg" style="width:100%; height:600px;">
+			<img src="Media/Image/vegretable.jpg" style="width:100%; height:600px;">
 
 			<div class="top-left" style="color:white;">
 			<b>Vegetables</b> are full of essential vitamins, minerals, and antioxidants that provide many important health benefits to your body. For instance, carrots are known for being very high in vitamin A, which plays an important role in eye health, as you grow older. 
@@ -154,7 +154,7 @@
 		
 		<div class="row9">
 			<div class="row9 row9firsttcolumn">
-			<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/fruits.jpg" style="width:50%; height:500px;">
+			<img src="Media/Image/fruits.jpg" style="width:50%; height:500px;">
 			<div>
 			<div class="row9  row9secondtcolumn">
 				Fruits are a good source of vitamins and minerals, recognized for their role in preventing vitamin C and vitamin A deficiencies. People who incorporate fruits and vegetables as part of a healthy eating pattern have a reduced risk of some chronic diseases. USDA's MyPlate encourages filling half of the plate with fruits and vegetables at mealtimes.Fruits are an important part of a healthy eating pattern and the source of many vital nutrients, including potassium, folate (folic acid), and antioxidants including polyphenols. Fruit such as blueberries, cranberries, strawberries and citrus also contain phytochemicals that are being studied for their added health benefits.  
