Menu Bar Created

--- a/Projects/Html/Fitness_profile/Fitness_Home.html
+++ b/Projects/Html/Fitness_profile/Fitness_Home.html
@@ -6,8 +6,14 @@
 	</head>
 	<body>
 		
-		<h1 class="centeredcontent pageTitle">Fitness New Goal 2020 - Changes made by Ambar</h1>		
+		<h1 class="centeredcontent pageTitle">Fitness New Goal 2021</h1>		
 	    
+		<div style="text-align:center">
+			<span><a href="Fitness_Home.html">Home</a></span>
+			<span><a href="Clients.html">Clients Profile</a></span>
+			<span><a href="Nutrition Diet Plan.html">Nutrition Diet Plans</a></span>
+		</div>
+		
 		<div class="newrow">
 			<div class="centeredcontent newcolumn">
 				<img src="Media/Image/trainer_profile.jpg" height="400" width="250">
