--- a/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
+++ b/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
@@ -5,6 +5,14 @@
 		<link rel="stylesheet" href="css/Fitness_style.css"></link>
 	</head>
 	<body>
+		<h1 class="centeredcontent pageTitle">Fitness Goal</h1>		
+	    
+		<div style="text-align:center">
+			<span><a href="Fitness_Home.html">Home</a></span>
+			<span><a href="Clients.html">Clients Profile</a></span>
+			<span><a href="Nutrition Diet Plan.html">Nutrition Diet Plans</a></span>
+		</div>
+		
 		
 		<h1 style="text-align:center; font-family:cursive; color:#808000 "><span style="font-size:20px";>Losing Weight is just </span> <span style="font-size:30px";>Eatinggg!!!</span><span style="color:red;">But in right way<span> </h1>
 		
