--- a/Projects/Html/Fitness_profile/Clients.html
+++ b/Projects/Html/Fitness_profile/Clients.html
@@ -8,8 +8,13 @@
 		
 		<h1 class="centeredcontent pageTitle">Fitness Goal</h1>		
 	    
-	
-	   <div class="rowthird">
+		<div style="text-align:center">
+			<span><a href="Fitness_Home.html">Home</a></span>
+			<span><a href="Clients.html">Clients Profile</a></span>
+			<span><a href="Nutrition Diet Plan.html">Nutrition Diet Plans</a></span>
+		</div>
+		
+		<div class="rowthird">
 		 <h1>Sucess stories</h1>
 			<div>
 				<img src="Media/Image/DietPlan.jpg">
