--- a/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
+++ b/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
@@ -35,21 +35,24 @@
 			</div>
 			<div class="nutritiondietplan column10">
 				Carbohydrates are found in a wide array of both healthy and unhealthy foods—bread, beans, milk, popcorn, potatoes, cookies, spaghetti, soft drinks, corn, and cherry pie. They also come in a variety of forms. The most common and abundant forms are sugars, fibers, and starches.Foods high in carbohydrates are an important part of a healthy diet. Carbohydrates provide the body with glucose, which is converted to energy used to support bodily functions and physical activity. But carbohydrate quality is important; some types of carbohydrate-rich foods are better than others:The healthiest sources of carbohydrates—unprocessed or minimally processed whole grains, vegetables, fruits and beans—promote good health by delivering vitamins, minerals, fiber, and a host of important phytonutrients.Unhealthier sources of carbohydrates include white bread, pastries, sodas, and other highly processed or refined foods.  These items contain easily digested carbohydrates that may contribute to weight gain, interfere with weight loss, and promote diabetes and heart disease.The Healthy Eating Plate recommends filling most of your plate with healthy carbohydrates – with vegetables (except potatoes) and fruits taking up about half of your plate, and whole grains filling up about one fourth of your plate.
+				<p style="color:red; font-size:23px; "><b>Space between 2 divs</b></p>
 			</div>
 			<div class=" column11">
-					<img src="Media/Image/carbs.jpg" height="200px" width="275px">
+					<img src="Media/Image/carbs.jpg" height="300px" width="300px">
+					<p style="color:red"><b>Doubt even after reducing<br></b></p>
+					<p style="color:red"><b> width image still remains in left???</b></p>
 			</div>
 		</div>
 		
 
 		<div class="row10">
-			<div class=" nutritiondietplan column101" style="color:#7FFF00; font-size:47px; font-family:cursive;">
-				Fats
+			<div class="row10 column101" style="font-family:cursive; font-size:30px;">
+			  <b>Fats</b>
 			</div>
-		  <div class=" nutritiondietplan column102" style="font-family:cursive; color:#FF7F50;">
+		  <div class=" row10 column102" style="font-family:cursive; color:#FF7F50;">
 			Fat are an essential part of our diet and is important for good health. There are different types of fats, with some fats being healthier than others. To help make sure you stay healthy, it is important to eat unsaturated fats in small amounts as part of a balanced diet.When eaten in large amounts, all fats, including healthy fats, can contribute to weight gain. Fat is higher in energy (kilojoules) than any other nutrient and so eating less fat overall is likely to help with weight loss.Eating less saturated and trans fats may help lower your risk of heart disease. When buying products check the labels and choose the varieties that are lower in saturated and trans fats and higher in poly and monounsaturated fats.So a diet that is low in saturated fats and trans fats, but that also includes moderate amounts of unsaturated fats will help you stay healthy.
 		 </div>
-		 <div class="nutritiondietplan column103">
+		 <div class="row10 column103">
 		    <img src="Media/Image/fats.jpg" height="200px" width="300px" style="text-align:right;">
 		 </div>
 		
@@ -93,15 +96,61 @@
 		</div>
 		
 		<div class="fruits">
-			<div class="fruits fruit1" style="font-family:cursive; font-size:35px; color:#0000ff">
+			<div class="fruitrow fruit1" style="font-family:cursive; font-size:35px; color:#0000ff">
 				<b>Fruits</b>
 			</div>
-			<div class="fruits fruit2" style="font-family:cursive; color:#ff00ff">
+			<div class="fruitrow fruit2" style="font-family:cursive; color:#ff00ff">
 				Fruits are a good source of vitamins and minerals, recognized for their role in preventing vitamin C and vitamin A deficiencies. People who incorporate fruits and vegetables as part of a healthy eating pattern have a reduced risk of some chronic diseases. USDA's MyPlate encourages filling half of the plate with fruits and vegetables at mealtimes.Fruits are an important part of a healthy eating pattern and the source of many vital nutrients, including potassium, folate (folic acid), and antioxidants including polyphenols. Fruit such as blueberries, cranberries, strawberries and citrus also contain phytochemicals that are being studied for their added health benefits.  
 			</div>
-			<div class="fruits fruit3">
+			<div class="fruitrow fruit3">
 				<img src="Media/Image/fruits.jpg">
 			</div>
+		</div>
+		
+		
+		<h1 style="text-align:center;">
+			 <b>Customized Weight loss chart we Provide :</b>
+		</h1>
+		
+		<div class="paleo">
+				<div class="paleo paleoheading ">
+					The Paleo Diet
+				</div>
+				<div class="paleo paleoimag">
+					<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/paleo.jpg"> 
+				</div>
+				<div class="paleo paleodetails">
+					The focus of the paleo diet is on eating foods that might have been available in the Paleolithic era. The paleo diet is also known as the stone age diet, hunter-gatherer diet, or caveman diet.Before modern agriculture developed around 10,000 years ago, people typically ate foods that they could hunt or gather, such as fish, lean meats, fruits, vegetables, nuts, and seeds.The development of modern farming changed how people ate. Dairy products, legumes, and grains became part of people’s diets.Proponents of the paleo diet believe that the human body has not evolved to process dairy, legumes, and grains and that eating these foods could increase the risk of certain health conditions, such as heart disease, obesity, and diabetes.For more details;
+				</div> 
+		</div>
+		
+		<div class="dietNo2">
+			<div class="dietNo2 veganHeading">
+				The Vegan Diet
+			</div>
+			<div class="dietNo2 vegandietimage">
+				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Vegan diet.jpg">
+			</div >
+			<div class="dietNo2 vegandetails">
+				Plant-based diets continue to grow in popularity, worldwide. There are plenty of reasons people switch to a plant-based diet, including ethical and environmental reasons. However, a growing number of people are shunning meat for health reasons. Evidence shows that plant-based diets may help support the immune system, lower the risk of heart disease and stroke, and may be good for overall health.You probably hear the most about low-carb eating for weight loss, but for some people, the approach could also help optimize their health, says Schmidt. “Research shows that women who are obese or have metabolic problems [may] do better hormonally on lower carbs,” says Schmidt, pointing out that other outcomes of the diet can include better sleep, mental clarity, and increased satiet	
+			</div>
+		</div>
+		
+		<div class="Lowcarbsdiet">
+			<div class="Lowcarbsdiet Lowcarbsdietheading">
+				The Low Carbs<br> Diet
+			</div> 
+			<div class="lowcarbsimage">
+				<img src="Media/Image/low carb diet.jpg">
+			</div>
+			<div class="Lowcarbdetails">
+				The Low-carbs diet
+				Low-carb diets are among the most popular diets for weight loss. Examples include the Atkins diet, ketogenic (keto) diet, and low-carb, high-fat (LCHF) diet.Low-carb diets are among the most popular diets for weight loss. Examples include the Atkins diet, ketogenic (keto) diet, and low-carb, high-fat (LCHF) diet. Early in 2019, a special commission set up by The Lancet, a peer-reviewed science journal, shared their recommendations for a healthy diet that was also sustainable for the planet. Comprising plant-based foods such as rice, wheat, cassava, potatoes, green veggies, red and orange veggies, and all fruits, the diet also included whole milk, meat, fish and eggs, albeit in smaller portions. The idea: to eat local, and eat in a way that the planet can sustain a population of 10 billion by 2050.
+			</div>
+		</div>
+		
+		<div>
+			<a></a>
 		</div>
 		
 		
