--- a/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
+++ b/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
@@ -117,7 +117,7 @@
 					The Paleo Diet
 				</div>
 				<div class="paleo paleoimag">
-					<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/paleo.jpg"> 
+					<img src="Media/Image/paleo.jpg"> 
 				</div>
 				<div class="paleo paleodetails">
 					The focus of the paleo diet is on eating foods that might have been available in the Paleolithic era. The paleo diet is also known as the stone age diet, hunter-gatherer diet, or caveman diet.Before modern agriculture developed around 10,000 years ago, people typically ate foods that they could hunt or gather, such as fish, lean meats, fruits, vegetables, nuts, and seeds.The development of modern farming changed how people ate. Dairy products, legumes, and grains became part of people’s diets.Proponents of the paleo diet believe that the human body has not evolved to process dairy, legumes, and grains and that eating these foods could increase the risk of certain health conditions, such as heart disease, obesity, and diabetes.For more details;
@@ -129,7 +129,7 @@
 				The Vegan Diet
 			</div>
 			<div class="dietNo2 vegandietimage">
-				<img src="E:/mitali/Projects/Html/Fitness_profile/Media/Image/Vegan diet.jpg">
+				<img src="Media/Image/Vegan diet.jpg">
 			</div >
 			<div class="dietNo2 vegandetails">
 				Plant-based diets continue to grow in popularity, worldwide. There are plenty of reasons people switch to a plant-based diet, including ethical and environmental reasons. However, a growing number of people are shunning meat for health reasons. Evidence shows that plant-based diets may help support the immune system, lower the risk of heart disease and stroke, and may be good for overall health.You probably hear the most about low-carb eating for weight loss, but for some people, the approach could also help optimize their health, says Schmidt. “Research shows that women who are obese or have metabolic problems [may] do better hormonally on lower carbs,” says Schmidt, pointing out that other outcomes of the diet can include better sleep, mental clarity, and increased satiet	
