--- a/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
+++ b/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
@@ -8,7 +8,7 @@
 		<h1 class="centeredcontent pageTitle">Fitness Goal</h1>		
 	    
 		<div style="text-align:center">
-			<span><a href="Fitness_Home.html">Home</a></span>
+			<span><a href="Fitness_Home.html" target="_blank">Home</a></span>
 			<span><a href="Clients.html">Clients Profile</a></span>
 			<span><a href="Nutrition Diet Plan.html">Nutrition Diet Plans</a></span>
 		</div>
@@ -17,7 +17,11 @@
 		<h1 style="text-align:center; font-family:cursive; color:#808000 "><span style="font-size:20px";>Losing Weight is just </span> <span style="font-size:30px";>Eatinggg!!!</span><span style="color:red;">But in right way<span> </h1>
 		
 		
-		<div class="rowseventh">
+		
+	
+		
+		
+		<div id="Proteins" class="rowseventh">
 			<div class="nutritiondietplan column8">
 			   <h1>Proteins</h1>
 			</div>
@@ -29,7 +33,7 @@
 			</div>
 		</div>
 		
-		<div class="roweigth">
+		<div id="Carbohydrates" class="roweigth">
 			<div class="nutritiondietplan column9" style="font-size:35px; font-family:cursive">
 				<b>Carbohydrates</b>
 			</div>
