--- a/Projects/Html/Fitness_profile/Fitness_Home.html
+++ b/Projects/Html/Fitness_profile/Fitness_Home.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>A Certified Fitness Trainer</title>
 		<link rel="stylesheet" href="css/Fitness_style.css"></link>
 	</head>
 	<body>
 		
-		<h1 class="centeredcontent pageTitle">Fitness New Goal 2021</h1>		
+		
+		<iframe class="pageTitleFrame" src="Page_Title.html" name="HomeTitleFrame"></iframe>
+		
+		Not in client page because we did not put in page_title 
+		Correct Clients page
+	    Image Path
+		Show workout page in menu
+		Show food type page in menu
+		
+		
+		<!-- <h1 class="centeredcontent pageTitle">Fitness Learning</h1>		 -->
 	    
-		<div style="text-align:center">
-			<span><a href="Fitness_Home.html">Home</a></span>
-			<span><a href="Clients.html">Clients Profile</a></span>
-			<span><a href="Nutrition Diet Plan.html">Nutrition Diet Plans</a></span>
-		</div>
+		<!-- <div style="text-align:center"> -->
+			<!-- <span><a href="Fitness_Home.html">Home</a></span> -->
+			<!-- <span><a href="Clients.html">Clients Profile</a></span> -->
+			<!-- <span><a href="Nutrition Diet Plan.html">Nutrition Diet Plans</a></span> -->
+		<!-- </div> -->
+		
+		
+		<a href="https://www.w3schools.com" target="HomeTitleFrame" style="font-size:35px;">W3Schools.com</a>....anchor tag can also open in same page or new page or iframe
 		
 		<div class="newrow">
 			<div class="centeredcontent newcolumn">
-				<img src="Media/Image/trainer_profile.jpg" height="400" width="250">
+				<img src="Media/Image/sports.jpg" width="60%" height="auto">
+				<picture>
+					<source srcset="Media/Image/trainer_profile.jpg" media="(max-width: 800px)"></source>
+					<source srcset="Media/Image/sports.jpg" media="(max-width: 400px)"></source>
+					<img src="Media/Image/Image10.jpg" width="60%" height="auto">
+				</picture>
 			</div>
 			<div class="newcolumn">
 					<h2 style="font-family:cursive;">Mark Stella</h2>
@@ -35,9 +54,7 @@
         </div>
 		
 		<div class="rowsecond">
-			
-			
-			<div class="column left " style="font-weight:bold; font-size:50px;  text-align:center;width:300px;" >
+			<div class="column left " style="font-weight:bold; font-size:50vm;  text-align:center;width:300vm;" >
 			    <span style="color:#9400D3; font-family:Brush Script MT;">Build</span> a</br>
                 <span style="color:#FF69B4;font-family:Trattatello, fantasy;">Perfect</span></br>
 				<span style="color:red;font-family:Lucida Console;">Body</span></br>
@@ -47,20 +64,20 @@
 				<span style="color:OrangeRed; font-family:Cursive">Diet</span></br>
 			</div>
 			<div class="column middle" style="background-color:#bb; background-color=#bbb">
-				<span style="color:	#808000; font-family:Brush Script MT; font-size:55px;">It's all consist about</span>
+				<span style="color:	#808000; font-family:Brush Script MT; font-size:55vm;">It's all consist about</span>
 				<span style="font-family:Brush Script MT;"></span>
-				<h1 class="big" style="line:height:normal;font-size:30px;" >Weight loss.</h1><br>
-				<p class="small" style="font-family:cursive; font-size:15px;line-height:normal;margin-bottom:0px; ;">Loose your weight Not ur Mind.When you lose weight too quickly, you lose fat and muscle. Muscle burns kilojoules, but fat doesn't. So, when you stop dieting and return to your usual habits, your body will burn even fewer calories than before because the relative amount of muscle in your body has decreased and your metabolic rate is slower.</p><br>
-				<h1 class="big" style="font-size:30px;">Cardiovascular Training</h1><br>
+				<h1 class="big" style="line:height:normal;font-size:30vm;" >Weight loss.</h1><br>
+				<p class="small" style="font-family:cursive; font-size:15vm;line-height:normal;margin-bottom:0vm; ;">Loose your weight Not ur Mind.When you lose weight too quickly, you lose fat and muscle. Muscle burns kilojoules, but fat doesn't. So, when you stop dieting and return to your usual habits, your body will burn even fewer calories than before because the relative amount of muscle in your body has decreased and your metabolic rate is slower.</p><br>
+				<h1 class="big" style="font-size:30vm;">Cardiovascular Training</h1><br>
 				<p class="small" style="font-family:cursive;font-size:15px;">Cardiovascular exercise is any vigorous activity that increases heart rate and respiration and raises oxygen and blood flow throughout the body while using large muscle groups of the body repetitively and rhythmically.</p><br>
-				<h1 class="big" style="font-size:30px;">Muscular Development & Training</h1><br>
-				<p class="small"style=" font-family:cursive;font-size:15px;">Muscular strength relates to your ability to move and lift objects. It’s measured by how much force you can exert and how much weight you can lift for a short period of time.Examples of exercises that develop muscular strength and power include resistance training, such as weightlifting, bodyweight exercises, and res istance band exercises. Running, cycling, and climbing hills are also options.Read on to learn more about the difference between muscular strength and muscular endurance, as well as muscular strength benefits, cautions, and exercises.</p>
+				<h1 class="big" style="font-size:30vm;">Muscular Development & Training</h1><br>
+				<p class="small"style=" font-family:cursive;font-size:5vw;">Muscular strength relates to your ability to move and lift objects. It’s measured by how much force you can exert and how much weight you can lift for a short period of time.Examples of exercises that develop muscular strength and power include resistance training, such as weightlifting, bodyweight exercises, and res istance band exercises. Running, cycling, and climbing hills are also options.Read on to learn more about the difference between muscular strength and muscular endurance, as well as muscular strength benefits, cautions, and exercises.</p>
 			</div>
 			<div class="column right" style="">
 			   <img src="Media/Image/Imag1.jpg">
 			</div>
 			
         </div>
-
+		
 	</body>
 </html>
