--- a/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
+++ b/Projects/Html/Fitness_profile/Nutrition Diet Plan.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	<meta tag name="viewport" content="width=device-width,intial-scale="1.0">
 		<title>A Certified Fitness Trainer</title>
 		<link rel="stylesheet" href="css/Fitness_style.css"></link>
 	</head>
 	<body>
-		<h1 class="centeredcontent pageTitle">Fitness Goal</h1>		
-	    
-		<div style="text-align:center">
-			<span><a href="Fitness_Home.html" target="_blank">Home</a></span>
-			<span><a href="Clients.html">Clients Profile</a></span>
-			<span><a href="Nutrition Diet Plan.html">Nutrition Diet Plans</a></span>
-		</div>
-		
-		
-		<h1 style="text-align:center; font-family:cursive; color:#808000 "><span style="font-size:20px";>Losing Weight is just </span> <span style="font-size:30px";>Eatinggg!!!</span><span style="color:red;">But in right way<span> </h1>
-		
-		
-		
 	
+		<iframe class="pageTitleFrame" src="Page_Title.html"></iframe>
 		
 		
+		<!-- <h1 class="centeredcontent pageTitle">Fitness Learning</h1>		 -->
+	    
+		<!-- <div style="text-align:center"> -->
+			<!-- <span><a href="Fitness_Home.html" target="_blank">Home</a></span> -->
+			<!-- <span><a href="Clients.html">Clients Profile</a></span> -->
+			<!-- <span><a href="Nutrition Diet Plan.html">Nutrition Diet Plans</a></span> -->
+		<!-- </div> -->
+		
+		
+		<h1 style="text-align:center; font-family:cursive; color:#808000 "><span style="font-size:20vm";>Losing Weight is just </span> <span style="font-size:30vm";>Eatinggg!!!</span><span style="color:red;">But in right way<span> </h1>
+		
+
 		<div id="Proteins" class="rowseventh">
 			<div class="nutritiondietplan column8">
 			   <h1>Proteins</h1>
 			</div>
-			<div class=" nutritiondietplan column6" style="font:family:cursive; color:blue;" height="50px" width="50px">
+			<div class=" nutritiondietplan column6" style="font:family:cursive; color:blue;" height="50vm" width="50vm">
 				Twenty-five percent of your daily nutritional intake should ideally come from healthy proteins found naturally (no shakes or powders please!). To begin with, let’s understand the TEF or Thermic Effect of Food, which is caused when you eat. The body uses its extra calories to process and digest this food. Of all the food groups, protein contains the highest TEF, potentially bringing it up to a whopping 30 percent, which is ten times more than the maximum of 3 per cent that fats offer.Protein is also a filling option, particularly animal sources of protein, so this prevents binge fests on unhealthy offerings, and makes sure your tummy feels satisfied in a good way. Protein is also a key nutrient in muscle-building, so when you take in a protein-rich diet, it helps convert fat to muscle, which in turn increases metabolism. So you’ll eat less, burn more, and stay strong – a win-win situation from every angle. 
 			</div>
 			<div class=" nutritiondietplan column7" style="font-family:cursive;">
-				<img src="Media/Image/Imageno11.png" height="250px" width="300px">
+				<img src="Media/Image/Imageno11.png" height="250vm" width="300vm">
 			</div>
 		</div>
 		
 		<div id="Carbohydrates" class="roweigth">
-			<div class="nutritiondietplan column9" style="font-size:35px; font-family:cursive">
+			<div class="nutritiondietplan column9" style="font-size:35vm; font-family:cursive">
 				<b>Carbohydrates</b>
 			</div>
 			<div class="nutritiondietplan column10">
@@ -42,7 +43,7 @@
 				<p style="color:red; font-size:23px; "><b>Space between 2 divs</b></p>
 			</div>
 			<div class=" column11">
-					<img src="Media/Image/carbs.jpg" height="300px" width="300px">
+					<img src="Media/Image/carbs.jpg" height="300vm" width="300vm">
 					<p style="color:red"><b>Doubt even after reducing<br></b></p>
 					<p style="color:red"><b> width image still remains in left???</b></p>
 			</div>
@@ -53,16 +54,17 @@
 			<div class="row10 column101" style="font-family:cursive; font-size:30px;">
 			  <b>Fats</b>
 			</div>
-		  <div class=" row10 column102" style="font-family:cursive; color:#FF7F50;">
-			Fat are an essential part of our diet and is important for good health. There are different types of fats, with some fats being healthier than others. To help make sure you stay healthy, it is important to eat unsaturated fats in small amounts as part of a balanced diet.When eaten in large amounts, all fats, including healthy fats, can contribute to weight gain. Fat is higher in energy (kilojoules) than any other nutrient and so eating less fat overall is likely to help with weight loss.Eating less saturated and trans fats may help lower your risk of heart disease. When buying products check the labels and choose the varieties that are lower in saturated and trans fats and higher in poly and monounsaturated fats.So a diet that is low in saturated fats and trans fats, but that also includes moderate amounts of unsaturated fats will help you stay healthy.
-		 </div>
-		 <div class="row10 column103">
-		    <img src="Media/Image/fats.jpg" height="200px" width="300px" style="text-align:right;">
-		 </div>
-		
+			<div class=" row10 column102" style="font-family:cursive; color:#FF7F50;">
+				Fat are an essential part of our diet and is important for good health. There are different types of fats, with some fats being healthier than others. To help make sure you stay healthy, it is important to eat unsaturated fats in small amounts as part of a balanced diet.When eaten in large amounts, all fats, including healthy fats, can contribute to weight gain. Fat is higher in energy (kilojoules) than any other nutrient and so eating less fat overall is likely to help with weight loss.Eating less saturated and trans fats may help lower your risk of heart disease. When buying products check the labels and choose the varieties that are lower in saturated and trans fats and higher in poly and monounsaturated fats.So a diet that is low in saturated fats and trans fats, but that also includes moderate amounts of unsaturated fats will help you stay healthy.
+			</div>
+			<div class="row10 column103">
+				<img src="Media/Image/fats.jpg" height="200vm" width="300vm" style="text-align:right;">
+			</div>
+		 
+		</div>
 		
 		<div class="row11">
-			<div class="row11 vegetable" style="font-size:35px; font-family:cursive; color:red;">
+			<div class="row11 vegetable" style="font-size:35vm; font-family:cursive; color:red;">
 				<b>Vegetable</b>
 			</div>
 			<div class="row11 vegetable1" style="font-family:cursive; color:LawnGreen;">
@@ -95,12 +97,12 @@
 
             </div>	
 			<div class="row11 vegetable2">
-				<img src="Media/Image/vegetables.jpg" height="200px;" width="300px;">
+				<img src="Media/Image/vegetables.jpg" height="200vm;" width="300vm;">
 			</div>		
 		</div>
 		
 		<div class="fruits">
-			<div class="fruitrow fruit1" style="font-family:cursive; font-size:35px; color:#0000ff">
+			<div class="fruitrow fruit1" style="font-family:cursive; font-size:35vm; color:#0000ff">
 				<b>Fruits</b>
 			</div>
 			<div class="fruitrow fruit2" style="font-family:cursive; color:#ff00ff">
