--- a/Projects/Html/Fitness_profile/Clients/Clients.html
+++ b/Projects/Html/Fitness_profile/Clients/Clients.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta tag name="viewport" content="width=device-width,intial-scale="1.0">
 		<title>A Certified Fitness Trainer-Clients</title>
-		<link rel="stylesheet" href="css/Fitness_style.css"></link>
+		<link rel="stylesheet" href="../css/Fitness_style.css"></link>
 	</head>
 	<body>
+	
+		<iframe class="pageTitleFrame" src="../Page_Title.html"></iframe>
 		
-		<h1 class="centeredcontent pageTitle">Fitness Goal</h1>		
+		<!-- <h1 class="centeredcontent pageTitle">Fitness Learning</h1>		 -->
 	    
-		<div style="text-align:center">
-			<span><a href="Fitness_Home.html">Home</a></span>
-			<span><a href="Clients.html">Clients Profile</a></span>
-			<span><a href="Nutrition Diet Plan.html">Nutrition Diet Plans</a></span>
-		</div>
+		<!-- <div style="text-align:center"> -->
+			<!-- <span><a href="Fitness_Home.html">Home</a></span> -->
+			<!-- <span><a href="Clients.html">Clients Profile</a></span> -->
+			<!-- <span><a href="Nutrition Diet Plan.html">Nutrition Diet Plans</a></span> -->
+		<!-- </div> -->
 		
 		<div class="rowthird">
 		 <h1>Sucess stories</h1>
 			<div>
-				<img src="Media/Image/DietPlan.jpg">
+				<img src="../Media/Image/DietPlan.jpg">
 			</div>
 			<div>
-				<img src="Media/Image/Imageno2.jpg">
+				<img src="../Media/Image/Imageno2.jpg">
 			</div>
 		</div>
 		
@@ -30,7 +33,7 @@
 			<tr >
 				<td height="300" class="client1data1">
 					<div >
-						<img src="Media/Image/client1.jpg"> 
+						<img src="../Media/Image/client1.jpg"> 
 					</div>
 				</td>
 				<td height="300" class="client1data2">
@@ -39,7 +42,7 @@
 						 y we cannot use hr for horizontal line;
 						 alternate picture and alternate data is not possible.same measurement are applied to all data cell.even height of all row must b equal.
 						<b>Alyssa Greene</b></p>
-						By the time she was 28, Stacy Blair was already beginning to have health problems due to her weight.
+						Byss the time she was 28, Stacy Blair was already beginning to have health problems due to her weight.
 						"I was taking medication for high blood pressure, my asthma was getting worse, and it was physically painful to walk or stand for more than five minutes," Blair told Women's Health in October.For the first time in her life, she was motivated to lose weight not for the sake of looking good, but for personal wellness and improving her health—an approach that changed everything."I wanted to be able to play an active role in my little brothers' lives rather than watching from the couch," she said. "I wanted to be able to be a mom one day. I wanted to be able to move without being in pain. I wanted to live instead of just exist."Blair got started by counting calories and keeping a daily log of her meals, which led to her going on a keto diet that helped her lose 220 pounds in 17 months."At the end of the day when everything is all said and done, it's not about the weight you lose, it's about the life you gain," she said.	
 					</div>
 				</td>
@@ -48,11 +51,11 @@
 			<tr>
 				<td height="300"class="client2data1">
 					<div >
-						<img src="Media/Image/Image8.jpg">
+						<img src="../Media/Image/Image8.jpg">
 					</div>
 				</td>
 				<td  height="300" class="client2data1">
-					<div >
+					<div>
 						<p style="text-align:left; color:red;">
 						<b>Kevin Gendreau</b></p>
 						Kevin Gendreau, MD, 31, wrestled with a food addiction for more than a decade, and was 306 pounds at his heaviest."I was diagnosed with high blood pressure, hypertension, high cholesterol, fatty liver disease, and sleep apnea, among other things," Gendreau told Best Life in October. "I knew they were all because of my eating habits, but I just couldn't stop."But when his sister was diagnosed with terminal cancer in 2016, it became a wake-up call for him to make his physical health a priority. "What she was going through wasn't her choice," he said. "What I was doing to myself was."By cutting out all the junk food and replacing it with a diet rich in fruits, vegetables, nuts, and protein, Gendreau lost 125 pounds in 18 months."The best advice that I can give is to find a motivation to change," he said. "For me, it was my sister getting sick and needing to be there for her kids, but it could be anything. Once you find that reason and commit to it, you're good to go."
@@ -62,7 +65,7 @@
 			
 			<tr>
 				<td height="300"class="client2data1">
-					<img src="Media/Image/Imageno9.jpg">
+					<img src="../Media/Image/Imageno9.jpg">
 				</td>
 				<td height="300" class="client2data1">
 					<div >
