--- a/Projects/Html/Fitness_profile/types_of_food.html
+++ b/Projects/Html/Fitness_profile/types_of_food.html
@@ -1,8 +1,11 @@
 <html>
     <head>
 		List of Different Food Types avaialble in nature
+		<meta tag name="viewport" content="width=device-width,intial-scale="1.0">
 	</head>
 	<body>
+	<link  rel="stylesheet" href="css/Fitness_style.css"></link>
+	<iframe class="pageTitleFrame" src="Page_Title.html"></iframe>
 	
 	<h2>Carbohydrates</h2>
 		
@@ -86,7 +89,7 @@
 														<li>Get moving. Your heart is a muscle and, as with any muscle, 	 exercise is what strengthens it</li>
 														<li>Quit smoking. Quitting smoking is tough</li>
 														<li>Lose weight. Losing weight is more than just diet and exercise</li>
-															<h1 style="font-size:15px;">50 Foods That Are Super Healthy</h1>	
+															<h1 style="font-size:15vm;">50 Foods That Are Super Healthy</h1>	
 														<li>Eat heart-healthy foods.</li>
 															<ol type="i">
 																<li>Apples</li>
@@ -124,7 +127,10 @@
 							<li><a href="#peanuts">Peanuts</a></li>
 						</ol>
 				</ul>
-					<li>Fruits</li>
+					<ul>
+						<li>Fruits</li>
+						<img src=""
+					</ul>
 					<li>Nuts and seeds</li>
 					<li>Whole-grain products</li>
 					<li>Vegetables</li>
@@ -132,7 +138,7 @@
 			<li>Starches</li>
 			<li>Sugars</li>
 	</ol>
-	<ul>
+	<ul id="peanuts">
 		<li>peanuts</li>
 		The peanut, also known as the groundnut,[2] goober (US),[3] pindar (US)[3] or monkey nut (UK), and taxonomically classified as Arachis hypogaea, is a legume crop grown mainly for its edible seeds. It is widely grown in the tropics and subtropics, being important to both small and large commercial producers. It is classified as both a grain legume[4] and, due to its high oil content, an oil crop.[5] World annual production of shelled peanuts was 44 million tonnes in 2016, led by China with 38% of the world total. Atypically among legume crop plants, peanut pods develop underground (geocarpy) rather than above ground. With this characteristic in mind, the botanist Carl Linnaeus gave peanuts the specific epithet hypogaea, which means "under the earth".The peanut belongs to the botanical family Fabaceae (or Leguminosae), commonly known as the legume, bean, or pea family.[1] Like most other legumes, peanuts harbor symbiotic nitrogen-fixing bacteria in root nodules.[6] The capacity to fix nitrogen means peanuts require less nitrogen-containing fertilizer and improve soil fertility, making them valuable in crop rotations.SSPeanuts are similar in taste and nutritional profile to tree nuts such as walnuts and almonds, and, as a culinary nut, are often served in similar ways in Western cuisines. The botanical definition of a nut is "a fruit whose ovary wall becomes hard at maturity". Using this criterion, the peanut is not a nut.[7] However, peanuts are usually categorized as nuts for culinary purposes and in common English more generally.
 	</ul>
